@@ -57,6 +57,7 @@ public:
 
 	void set_subtitle (PositionImage);
 
+	void prepare ();
 	boost::shared_ptr<Image> image (dcp::NoteHandler note, boost::function<AVPixelFormat (AVPixelFormat)> pixel_format, bool aligned, bool fast) const;
 
 	static AVPixelFormat always_rgb (AVPixelFormat);
