@@ -1,3 +1,7 @@
+2017-07-26  Carl Hetherington  <cth@carlh.net>
+
+	* Multi-threaded decode of DCP when previewing.
+
 2017-07-25  Carl Hetherington  <cth@carlh.net>
 
 	* Configurable config.xml location (#780, #1100).
